--- a/index.html
+++ b/index.html
@@ -9,19 +9,20 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
     integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+    crossorigin="anonymous" referrerpolicy="no-referrer"/>
   <!--Import materialize.css-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
   <title>Bizi</title>
 </head>
 
 <body>
   <!---Nav------->
   <section style="background: url(bg1.jpg)center/cover no-repeat fixed; height: 100vh;">
-    <div class="navbar-fixed transparent">
-      <nav class="nav-wraper transparent">
+    <nav class="transparent">
+      <div class="nav-wrapper">
         <div class="container">
-          <a href="#!" class="brand-logo">Bizi</a>
+          <a href="#!" class="brand-logo">Logo</a>
           <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
           <ul class="right hide-on-med-and-down">
             <li><a href="#home">Home</a></li>
@@ -29,19 +30,24 @@
             <li><a href="#test">Testimonials</a></li>
             <li><a href="#contact">Contact</a></li>
             <li><a href="#" class="btn btn- light-blue darken-2">DAWNLOAD</a></li>
+
+
           </ul>
         </div>
-      </nav>
+      </div>
+    </nav>
 
-      <ul class="sidenav" id="mobile-demo">
-        <li class=" grey darken-2"> <a href="index.html" class="brand-logo center white-text">Bizi</a>
-        </li>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <li><a href="#test">Testimonials</a></li>
-        <li><a href="#" class="btn btn- light-blue darken-2">DAWNLOAD</a></li>
-      </ul>
+    <ul class="sidenav" id="mobile-demo">
+      <li><a href="#home">Home</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#test">Testimonials</a></li>
+      <li><a href="#contact">Contact</a></li>
+      <li><a href="#" class="btn btn- light-blue darken-2">DAWNLOAD</a></li>
+
+    </ul>
+
+
+
 
 
     </div>
@@ -219,7 +225,7 @@
               </ul>
             </div>
           </div>
-          </div>
+        </div>
         </div>
 
         <div class="footer-copyright blue-grey darken-4">
@@ -235,14 +241,14 @@
         </div>
         </div>
       </footer>
-     
+
     </section>
-     <!-- end footer -->
+    <!-- end footer -->
 
     <!--JavaScript at end of body for optimized loading-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
-      referrerpolicy="no-referrer"></script>
+
+
 
     <script>
       document.addEventListener('DOMContentLoaded', function () {
